--- a/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
+++ b/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Calculator View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MAPD714_ElenaMelnikova_301025880" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Calculator Screen" id="BYZ-38-t0r" userLabel="Calculator View Controller" customClass="CalculatorViewController" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -216,7 +216,7 @@
                                     <action selector="operationsField:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qYV-wt-ObT"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLj-AY-jzx" userLabel="0" customClass="UILabelPadding" customModule="MAPD714_ElenaMelnikova_301025880" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLj-AY-jzx" userLabel="0" customClass="UILabelPadding" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target">
                                 <rect key="frame" x="16" y="36" width="343" height="150"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
