--- a/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
+++ b/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
@@ -332,5 +332,35 @@
             </objects>
             <point key="canvasLocation" x="-98.400000000000006" y="118.29085457271366"/>
         </scene>
+        <!--Switching View Controller-->
+        <scene sceneID="2k3-g8-wer">
+            <objects>
+                <viewController storyboardIdentifier="Switching Screen" id="Ezc-6W-mM8" customClass="SwitchingViewController" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M00-Ch-RYn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="WvG-uC-pJE"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ine-mJ-ARK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="559" y="118"/>
+        </scene>
+        <!--Options View Controller-->
+        <scene sceneID="aK0-22-C4X">
+            <objects>
+                <viewController storyboardIdentifier="Options Screen" id="HWj-ws-h0l" customClass="OptionsViewController" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PoU-3d-l78">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="YOX-S2-ued"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="odW-DM-fC1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1250" y="118"/>
+        </scene>
     </scenes>
 </document>
