--- a/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
+++ b/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
@@ -367,13 +367,67 @@
                     <view key="view" contentMode="scaleToFill" id="PoU-3d-l78">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KHS-P8-Mbt">
+                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t9J-Np-w4p">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Text Color">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQW-fu-2J5">
+                                        <rect key="frame" x="0.0" y="-20" width="375" height="0.0"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="White"/>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOa-7U-uwP">
+                                        <rect key="frame" x="0.0" y="-20" width="375" height="0.0"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Yellow"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vpI-Do-VwW">
+                                <rect key="frame" x="0.0" y="80" width="375" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2gC-6j-HYE">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Background Color">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lOY-Jv-OwF">
+                                        <rect key="frame" x="0.0" y="-80" width="375" height="0.0"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Gray"/>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODg-qg-aNt">
+                                        <rect key="frame" x="0.0" y="-80" width="375" height="0.0"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Red"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vpI-Do-VwW" firstAttribute="top" secondItem="KHS-P8-Mbt" secondAttribute="bottom" constant="30" id="1dX-vr-uN1"/>
+                            <constraint firstItem="KHS-P8-Mbt" firstAttribute="top" secondItem="YOX-S2-ued" secondAttribute="top" id="Lgl-Oa-fEn"/>
+                            <constraint firstItem="YOX-S2-ued" firstAttribute="trailing" secondItem="vpI-Do-VwW" secondAttribute="trailing" id="ZDg-rC-7op"/>
+                            <constraint firstItem="KHS-P8-Mbt" firstAttribute="leading" secondItem="YOX-S2-ued" secondAttribute="leading" id="d5D-QZ-i6B"/>
+                            <constraint firstItem="vpI-Do-VwW" firstAttribute="leading" secondItem="YOX-S2-ued" secondAttribute="leading" id="oX6-fW-rGd"/>
+                            <constraint firstItem="YOX-S2-ued" firstAttribute="trailing" secondItem="KHS-P8-Mbt" secondAttribute="trailing" id="rKb-hi-MCs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="YOX-S2-ued"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="odW-DM-fC1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1383" y="127"/>
+            <point key="canvasLocation" x="1381.5999999999999" y="126.38680659670166"/>
         </scene>
     </scenes>
 </document>
