--- a/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
+++ b/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
@@ -377,16 +377,27 @@
                                         <state key="normal" title="Text Color">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="menuAction:" destination="HWj-ws-h0l" eventType="touchUpInside" id="G8E-7e-rgm"/>
+                                        </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQW-fu-2J5">
                                         <rect key="frame" x="0.0" y="-20" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="White"/>
+                                        <connections>
+                                            <action selector="menuAction:" destination="HWj-ws-h0l" eventType="touchUpInside" id="t1t-EX-kkt"/>
+                                            <action selector="menuItemsActions:" destination="HWj-ws-h0l" eventType="touchUpInside" id="kIh-SV-Wr6"/>
+                                        </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOa-7U-uwP">
                                         <rect key="frame" x="0.0" y="-20" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Yellow"/>
+                                        <connections>
+                                            <action selector="menuAction:" destination="HWj-ws-h0l" eventType="touchUpInside" id="lqc-Aj-TcG"/>
+                                            <action selector="menuItemsActions:" destination="HWj-ws-h0l" eventType="touchUpInside" id="X08-2d-Scp"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -399,16 +410,27 @@
                                         <state key="normal" title="Background Color">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="menuAction2:" destination="HWj-ws-h0l" eventType="touchUpInside" id="dcB-SE-UCr"/>
+                                        </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lOY-Jv-OwF">
                                         <rect key="frame" x="0.0" y="-80" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Gray"/>
+                                        <connections>
+                                            <action selector="menuAction2:" destination="HWj-ws-h0l" eventType="touchUpInside" id="2tn-DR-Ywl"/>
+                                            <action selector="menuItemsActions2:" destination="HWj-ws-h0l" eventType="touchUpInside" id="b4k-hU-Nhx"/>
+                                        </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODg-qg-aNt">
                                         <rect key="frame" x="0.0" y="-80" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Red"/>
+                                        <connections>
+                                            <action selector="menuAction2:" destination="HWj-ws-h0l" eventType="touchUpInside" id="NPP-TS-iZV"/>
+                                            <action selector="menuItemsActions2:" destination="HWj-ws-h0l" eventType="touchUpInside" id="62i-iw-gAX"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -424,6 +446,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YOX-S2-ued"/>
                     </view>
+                    <connections>
+                        <outlet property="menuOutlet" destination="t9J-Np-w4p" id="W2J-JZ-dbe"/>
+                        <outlet property="menuOutlet2" destination="2gC-6j-HYE" id="V5x-l0-ZJm"/>
+                        <outletCollection property="menuItemsOutlets" destination="YQW-fu-2J5" collectionClass="NSMutableArray" id="s5l-sx-g3S"/>
+                        <outletCollection property="menuItemsOutlets" destination="HOa-7U-uwP" collectionClass="NSMutableArray" id="Vxa-rc-LAV"/>
+                        <outletCollection property="menuItemsOutlets2" destination="lOY-Jv-OwF" collectionClass="NSMutableArray" id="Ovu-Kr-ZRj"/>
+                        <outletCollection property="menuItemsOutlets2" destination="ODg-qg-aNt" collectionClass="NSMutableArray" id="9Iy-eH-n7P"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="odW-DM-fC1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
