--- a/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
+++ b/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Calculator View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="Calculator Screen" id="BYZ-38-t0r" userLabel="Calculator View Controller" customClass="CalculatorViewController" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Calculator" id="BYZ-38-t0r" userLabel="Calculator View Controller" customClass="CalculatorViewController" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -343,15 +343,22 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6D7-RJ-272">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Switch" id="1CC-mg-F3v"/>
+                                    <barButtonItem title="Switch" id="1CC-mg-F3v">
+                                        <connections>
+                                            <action selector="switchViewsWithSender:" destination="Ezc-6W-mM8" id="5Pp-9w-LcA"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6D7-RJ-272" firstAttribute="top" secondItem="WvG-uC-pJE" secondAttribute="top" id="Lls-ru-dkY"/>
-                            <constraint firstItem="6D7-RJ-272" firstAttribute="trailing" secondItem="WvG-uC-pJE" secondAttribute="trailing" id="RL2-d8-N2H"/>
-                            <constraint firstItem="6D7-RJ-272" firstAttribute="leading" secondItem="WvG-uC-pJE" secondAttribute="leading" id="xOf-S9-g7k"/>
+                            <constraint firstItem="6D7-RJ-272" firstAttribute="trailing" secondItem="WvG-uC-pJE" secondAttribute="trailing" id="909-Fb-5vM"/>
+                            <constraint firstItem="6D7-RJ-272" firstAttribute="top" secondItem="WvG-uC-pJE" secondAttribute="top" id="GJf-xy-NXA"/>
+                            <constraint firstItem="6D7-RJ-272" firstAttribute="leading" secondItem="WvG-uC-pJE" secondAttribute="leading" id="K8c-oN-PQW"/>
+                            <constraint firstItem="6D7-RJ-272" firstAttribute="leading" secondItem="WvG-uC-pJE" secondAttribute="leading" id="Lct-jr-15c"/>
+                            <constraint firstItem="6D7-RJ-272" firstAttribute="trailing" secondItem="WvG-uC-pJE" secondAttribute="trailing" id="UnP-0T-mJ1"/>
+                            <constraint firstItem="6D7-RJ-272" firstAttribute="top" secondItem="WvG-uC-pJE" secondAttribute="top" id="ox9-n0-SOD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WvG-uC-pJE"/>
                     </view>
@@ -363,17 +370,21 @@
         <!--Options View Controller-->
         <scene sceneID="aK0-22-C4X">
             <objects>
-                <viewController storyboardIdentifier="Options Screen" id="HWj-ws-h0l" customClass="OptionsViewController" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Options" id="HWj-ws-h0l" customClass="OptionsViewController" customModule="MAPD714_ElenaMelnikova_optionsScreen" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PoU-3d-l78">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KHS-P8-Mbt">
-                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t9J-Np-w4p">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                         <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="J6w-vT-E6F"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                         <state key="normal" title="Text Color">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -382,7 +393,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQW-fu-2J5">
-                                        <rect key="frame" x="0.0" y="-20" width="375" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="-70" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="White"/>
                                         <connections>
@@ -391,7 +402,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOa-7U-uwP">
-                                        <rect key="frame" x="0.0" y="-20" width="375" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="-70" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Yellow"/>
                                         <connections>
@@ -402,11 +413,15 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vpI-Do-VwW">
-                                <rect key="frame" x="0.0" y="80" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="180" width="375" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2gC-6j-HYE">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                         <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="INe-Fx-Y6j"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                         <state key="normal" title="Background Color">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -415,7 +430,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lOY-Jv-OwF">
-                                        <rect key="frame" x="0.0" y="-80" width="375" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="-180" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Gray"/>
                                         <connections>
@@ -424,7 +439,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODg-qg-aNt">
-                                        <rect key="frame" x="0.0" y="-80" width="375" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="-180" width="375" height="0.0"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Red"/>
                                         <connections>
@@ -437,22 +452,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vpI-Do-VwW" firstAttribute="top" secondItem="KHS-P8-Mbt" secondAttribute="bottom" constant="30" id="1dX-vr-uN1"/>
-                            <constraint firstItem="KHS-P8-Mbt" firstAttribute="top" secondItem="YOX-S2-ued" secondAttribute="top" id="Lgl-Oa-fEn"/>
-                            <constraint firstItem="YOX-S2-ued" firstAttribute="trailing" secondItem="vpI-Do-VwW" secondAttribute="trailing" id="ZDg-rC-7op"/>
-                            <constraint firstItem="KHS-P8-Mbt" firstAttribute="leading" secondItem="YOX-S2-ued" secondAttribute="leading" id="d5D-QZ-i6B"/>
-                            <constraint firstItem="vpI-Do-VwW" firstAttribute="leading" secondItem="YOX-S2-ued" secondAttribute="leading" id="oX6-fW-rGd"/>
-                            <constraint firstItem="YOX-S2-ued" firstAttribute="trailing" secondItem="KHS-P8-Mbt" secondAttribute="trailing" id="rKb-hi-MCs"/>
+                            <constraint firstItem="YOX-S2-ued" firstAttribute="trailing" secondItem="KHS-P8-Mbt" secondAttribute="trailing" id="9MO-uo-VdA"/>
+                            <constraint firstItem="vpI-Do-VwW" firstAttribute="top" secondItem="KHS-P8-Mbt" secondAttribute="bottom" constant="60" id="B32-6M-4C9"/>
+                            <constraint firstItem="YOX-S2-ued" firstAttribute="trailing" secondItem="vpI-Do-VwW" secondAttribute="trailing" id="ZzD-xJ-vcM"/>
+                            <constraint firstItem="KHS-P8-Mbt" firstAttribute="leading" secondItem="YOX-S2-ued" secondAttribute="leading" id="iJy-xk-pdn"/>
+                            <constraint firstItem="KHS-P8-Mbt" firstAttribute="top" secondItem="YOX-S2-ued" secondAttribute="top" constant="50" id="mww-rU-gTN" userLabel="Stack View.top = Safe Area.top + 30"/>
+                            <constraint firstItem="vpI-Do-VwW" firstAttribute="leading" secondItem="YOX-S2-ued" secondAttribute="leading" id="sFw-sr-gTI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YOX-S2-ued"/>
                     </view>
                     <connections>
                         <outlet property="menuOutlet" destination="t9J-Np-w4p" id="W2J-JZ-dbe"/>
                         <outlet property="menuOutlet2" destination="2gC-6j-HYE" id="V5x-l0-ZJm"/>
-                        <outletCollection property="menuItemsOutlets" destination="YQW-fu-2J5" collectionClass="NSMutableArray" id="s5l-sx-g3S"/>
-                        <outletCollection property="menuItemsOutlets" destination="HOa-7U-uwP" collectionClass="NSMutableArray" id="Vxa-rc-LAV"/>
                         <outletCollection property="menuItemsOutlets2" destination="lOY-Jv-OwF" collectionClass="NSMutableArray" id="Ovu-Kr-ZRj"/>
                         <outletCollection property="menuItemsOutlets2" destination="ODg-qg-aNt" collectionClass="NSMutableArray" id="9Iy-eH-n7P"/>
+                        <outletCollection property="menuItemsOutlets" destination="YQW-fu-2J5" collectionClass="NSMutableArray" id="s5l-sx-g3S"/>
+                        <outletCollection property="menuItemsOutlets" destination="HOa-7U-uwP" collectionClass="NSMutableArray" id="Vxa-rc-LAV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="odW-DM-fC1" userLabel="First Responder" sceneMemberID="firstResponder"/>
