--- a/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/LaunchScreen.storyboard
+++ b/MAPD714_ElenaMelnikova_optionsScreen/Base.lproj/LaunchScreen.storyboard
@@ -18,17 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash_image" translatesAutoresizingMaskIntoConstraints="NO" id="SZe-Ru-zaU">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash_image.png" translatesAutoresizingMaskIntoConstraints="NO" id="UAp-9C-Hgk">
+                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="375" id="5DY-9O-zrN"/>
+                                    <constraint firstAttribute="width" constant="375" id="NLS-Pv-UtV"/>
+                                </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SZe-Ru-zaU" secondAttribute="trailing" id="9fm-l2-H0O"/>
-                            <constraint firstItem="SZe-Ru-zaU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Cv5-X8-MaU"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="SZe-Ru-zaU" secondAttribute="bottom" id="foA-WK-V2R"/>
-                            <constraint firstItem="SZe-Ru-zaU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="i1J-fg-Xci"/>
+                            <constraint firstItem="UAp-9C-Hgk" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="eMM-3d-mbB"/>
+                            <constraint firstItem="UAp-9C-Hgk" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="xZy-ee-4Mf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -39,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Splash_image" width="512" height="512"/>
+        <image name="Splash_image.png" width="512" height="512"/>
     </resources>
 </document>
